--- a/sanvalentin.html
+++ b/sanvalentin.html
@@ -84,7 +84,7 @@
       border-radius: 10px;
       box-shadow: 0 0 10px rgba(0,0,0,0.2);
     }
-    /* ---------- PUZZLE (3x3 = 9 piezas) ---------- */
+    /* ---------- PUZZLE INTERACTIVO (3x3 = 9 piezas) ---------- */
     #puzzle-section {
       text-align: center;
     }
@@ -103,7 +103,7 @@
     .puzzle-piece {
       width: 100%;
       height: 100%;
-      background-image: url('WhatsApp Image 2024-11-28 at 9.35.15 PM (1).png'); /* Asegúrate de usar una imagen de 450x450 */
+      background-image: url('WhatsApp Image 2024-11-28 at 9.35.15 PM (1).png');
       background-size: 450px 450px;
       cursor: pointer;
       box-sizing: border-box;
